# auth_service_practice

./: LICENSE  README.md  justfile.template
api/: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  justfile
api/configs/: dev.template.toml  prod.template.toml
api/src/: config.rs  domain.rs  main.rs
api/src/domain/: code.rs  common.rs  openid.rs
api/src/domain/code/: constants.rs  traits.rs
api/src/domain/common/: exceptions.rs
api/src/domain/openid/: entities.rs  exceptions.rs
api/src/presentation/: rest.rs
api/src/presentation/rest/: exceptions.rs  extractors.rs  handlers.rs  responses.rs  state.rs
api/src/presentation/rest/extractors/: claims.rs  exceptions.rs
api/src/presentation/rest/handlers/: root.rs
authorization_proxy/: .env.template  .gitignore  README.md  docker-compose.yaml  justfile  oauth2-proxy.cfg.template
authorization_server/: .env.template  Dockerfile  README.md  docker-compose.yaml  justfile
reverse_proxy/: .gitignore  README.md  docker-compose.yaml  justfile  nginx.conf  nginx.conf.template
sish/client/: README.md
